@@ -7,6 +7,7 @@
 //
 
 #import <Cocoa/Cocoa.h>
+#import "PGCocoaDB.h"
 
 @interface ExplorerNode : NSObject {
 	NSMutableArray * children;
