@@ -7,6 +7,7 @@
 
 #import <Foundation/Foundation.h>
 #import "Field.h"
+#import "PGCocoaDB.h"
 
 @interface Fields : NSObject 
 {
