@@ -1,0 +1,14 @@
+/*
+ *  PGCocoaDB.h
+ *  pgCocoaDBn
+ *
+ *  Created by Neil Tiffin on 8/30/06.
+ *  Copyright 2006 Performance Champions, Inc.. All rights reserved.
+ *
+ */
+
+
+// To tell other that parpameters are purposesly not used and remove compiler warning.
+#define UNUSED_PARAMETER(x) (void)(x)
+
+// Global Project Definitions
