@@ -7,6 +7,7 @@
 
 #import <Foundation/Foundation.h>
 #import "Record.h"
+#import "PGCocoaDB.h"
 
 @interface RecordSet : NSObject 
 {
