@@ -10,6 +10,7 @@
 #import <Cocoa/Cocoa.h>
 #import "Recordset.h"
 #import "Connection.h"
+#import "PGCocoaDB.h"
 
 @interface Schema : NSObject {
 
